copy conditional formatting for single cells, fdo#82503

Change-Id: I22f239fbbbfa3ac562b860efb990dff10d0e0e24